--- a/index.html
+++ b/index.html
@@ -115,12 +115,16 @@
             </ul>
 
             <div class="box-01">
-            <span class="text-white-number-01">01</span></div>
+              <span class="text-white-number-01">01</span>
+            </div>
         </div>
 
       <div class="quadcopt">
+        <button class="button-slider-1 slider" type="button"><img src="/images/main/slider.svg" width="20px" height="60px"></button>
         <img src="./images/main/foto quadcopt.png" class="quadcopt-img" alt="Фотография квадрокоптера" width="560" height="560">
+        <button class="button-slider-2 slider" type="button"><img src="/images/main/slider.svg" width="20px" height="60px"></button>
       </div>
+
       <div class="description-box">
         <section class="main-description">
           <h1 class="main">Порхает как бабочка,<br>жалит как пчела!</h1>
@@ -131,6 +135,11 @@
          <div class="more">
         <div class="rectangle"></div>
         <button type="button" class="button-main">подробнее</button>
+        </div>
+        <div class="pointer-slider">
+          <div class="pointer pointer-1"></div>
+          <div class="pointer pointer-2"></div>
+          <div class="pointer pointer-3"></div>
         </div>
         <div class="details">
           <div class="far">
