--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
                 <div class="popover popover-cart">
                   <div class="popover-content">
                     <div class="popover-cart-1">
-                      <img src="/images/catalog/selfie-stick.jpg" width="39px" height="43px" class="popover-img-1">
+                      <img src="./images/catalog/selfie-stick.jpg" width="39px" height="43px" class="popover-img-1">
                       <p class="popover-title-1">Любительская <br> селфи-палка</p>
-                      <button type="button" class="close-button-1"><img src="images/header/close-button.svg" width="10px" height="10px"></button>
+                      <button type="button" class="close-button-1"><img src="./images/header/close-button.svg" width="10px" height="10px"></button>
                     </div>
                     <div class="popover-cart-2">
-                      <img src="/images/catalog/stick-pro-foto.jpg" width="39px" height="43px" class="popover-img-2">
+                      <img src="./images/catalog/stick-pro-foto.jpg" width="39px" height="43px" class="popover-img-2">
                       <p class="popover-title-2">Профессиональная <br> селфи-палка</p>
-                      <button type="button" class="close-button-1"><img src="images/header/close-button.svg" width="10px" height="10px"></button>
+                      <button type="button" class="close-button-1"><img src="./images/header/close-button.svg" width="10px" height="10px"></button>
                     </div>
                     <div class="popover-cart-3">
                       <span>Товаров: 2</span>
@@ -77,7 +77,7 @@
                   <a href="catalog.html" class="link catalog-main">
                   каталог товаров
                   </a>
-                  <button type="button" class="navigation-button"><img src="/images/header/plus.svg" width="16px" height=""></button>
+                  <button type="button" class="navigation-button"><img src="./images/header/plus.svg" width="16px" height=""></button>
                   <div class="dropdown-menu">
                     <div class="menu menu-1">
                       <a href="#" class="menu-vr">Виртуальная реальность</a>
@@ -120,9 +120,9 @@
         </div>
 
       <div class="quadcopt">
-        <button class="button-slider-1 slider" type="button"><img src="/images/main/slider.svg" width="20px" height="60px"></button>
+        <button class="button-slider-1 slider" type="button"><img src="./images/main/slider.svg" width="20px" height="60px"></button>
         <img src="./images/main/foto quadcopt.png" class="quadcopt-img" alt="Фотография квадрокоптера" width="560" height="560">
-        <button class="button-slider-2 slider" type="button"><img src="/images/main/slider.svg" width="20px" height="60px"></button>
+        <button class="button-slider-2 slider" type="button"><img src="./images/main/slider.svg" width="20px" height="60px"></button>
       </div>
 
       <div class="description-box">
