--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
   </head>
   <body>
     <header class="page-header-catalog">
@@ -85,13 +85,13 @@
               <a class="description breadcrumbs-link" href="index.html">Главная</a>
             </li>
             <li class="breadcrumbs-img">
-              <img src="/images/catalog/breadcrumbs.svg" width="4px" height="7px" class="crumbs">
+              <img src="./images/catalog/breadcrumbs.svg" width="4px" height="7px" class="crumbs">
             </li>
             <li class="description breadcrumbs-item">
               <a class="description breadcrumbs-catalog" href="catalog.html">Каталог</a>
             </li>
             <li class="breadcrumbs-img">
-              <img src="/images/catalog/breadcrumbs.svg" width="4px" height="7px" class="crumbs">
+              <img src="./images/catalog/breadcrumbs.svg" width="4px" height="7px" class="crumbs">
             </li>
             <li class="description breadcrumbs-detail">
               <a class="description breadcrumbs-detail-mono">Моноподы для селфи</a>
